# ciphered-pattern-api

./: .gitignore  README.md  ciphered-pattern-api.service  generate.py  main.py  pyproject.toml
source/: patterns.txt
